--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
   <a href="#myPage" style="width: 100%">
     <img src="https://cdn.discordapp.com/attachments/757710846607753256/763542539595677746/100X100.png">
   </a>
-  <p><br><br>Conforto Aquecedores ® Todos direitos reservados | Produzido por <a href="https://tszsocialmedia.work/work" title="Visit TSZ Social Media" target="_blank"><strong>TSZ Social Media</strong></a> </p>
+  <p><br><br>Conforto Aquecedores ® Todos direitos reservados | Produzido por <a href="https://www.instagram.com/tszsocialmedia/" title="Visit TSZ Social Media" target="_blank"><strong>TSZ Social Media</strong></a> </p>
 </footer>
 
 <!-- Botão Flutuante WhatsApp -->
