--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-left">
-      <!--<li><a>71 3208-2350</a></li>-->
+      <li><a>71 3208-2350</a></li>
       <li><a>71 99664-4232</a></li>
       </ul>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -307,7 +307,7 @@
     <div class="col-sm-5">
       <p><h3>Contrate os nossos serviços!</h3></p>
       <p><span class="glyphicon glyphicon-map-marker bg-orange"></span> R. Professor Pinto de Aguiar - Boca do Rio - Salvador/BA</p>
-      <!--<p><span class="glyphicon glyphicon-earphone bg-orange"></span> 71 3208-2350</p>-->
+      <p><span class="glyphicon glyphicon-earphone bg-orange"></span> 71 3208-2350</p>
       <p><span class="glyphicon glyphicon-phone bg-orange"></span>71 99664-4232</p>
       <p><span class="glyphicon glyphicon-envelope bg-orange"></span> <a href="mailto:contato@confortoaquecedores.com? cc=contato@confortoaquecedores.com&subject=">contato@confortoaquecedores.com</p>
     </div>
